--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" id="sumar-button" />
+    <h1>LOGIN</h1>
+    <form id="login-form">
+      <label for="user">Usuario:</label>
+      <input type="text" id="usuario" />
+      <label for="password">Contraseña:</label>
+      <input type="text" id="password" />
+      <input type="submit" value="Crear" id="crear-button" />
     </form>
     <div id="resultado-div"></div>
 
